Allow illegal access during Maven build
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>