@@ -132,10 +132,7 @@ spec:
             sh 'gpg --batch --import-options restore --import "${KEYRING}"'
             sh 'gpg --list-secret-keys'
           }
-          sh 'export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED \
-                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
-                --add-opens=java.base/java.text=ALL-UNNAMED \
-                --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"'
+          sh 'export MAVEN_OPTS="--illegal-access=permit"'
           sh "mvn deploy \
                 -DskipTests=true -DnoDocker -DcreateGPGSignature=true -DcreateJavadoc=true -DenableEclipseJarSigner=true \
                 -am -pl '\
